<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    tools:context=".profil">

    <!--    judul profil -->
    <TextView
        android:id="@+id/profil"
        android:layout_width="118dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal|top"
        android:letterSpacing="-0.02"
        android:textStyle="bold"
        android:text="@string/Profil"
        android:textSize="18sp" />

    <!--    kotak putih -->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="315dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="110dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/button_rounded"
        tools:ignore="DuplicateIds" />

    <!--    foto profil -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="none"
        app:srcCompat="@drawable/pp" />

    <!--    nama -->
    <TextView
        android:id="@+id/fatimah_aul"
        android:layout_width="188dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="152dp"
        android:gravity="center_horizontal|top"
        android:text="@string/fatimah_aul"
        android:textAppearance="@style/fatimah_aul"
        android:textStyle="bold"
        android:textSize="15sp" />

    <!--    nomor hp -->
    <TextView
        android:id="@+id/some_id"
        android:layout_width="188dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="185dp"
        android:gravity="center_horizontal|top"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:textSize="15sp" />

    <!--    alamat -->
    <TextView
        android:id="@+id/murriverie_"
        android:layout_width="249dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="214dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/murriverie_"
        android:textAppearance="@style/murriverie_"
        android:textSize="15sp" />

    <!--    kotak status pengiriman-->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="286dp"
        android:background="@color/white"
        tools:ignore="DuplicateIds" />

    <!--    sub judul status pengiriman -->
    <TextView
        android:id="@+id/status_peng"
        android:layout_width="120dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="301dp"
        android:gravity="center_vertical"
        android:letterSpacing="-0.03"
        android:text="@string/status_peng"
        android:textAppearance="@style/status_peng"
        android:textSize="15dp" />


    <!--    pesan -->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="338dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#969696"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/pesan" />

    <!--    antrian-->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="338dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#000000"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/antri" />

    <!--    antar-->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="338dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#F3F3F3"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="237dp"
        android:layout_marginTop="355dp"
        app:srcCompat="@drawable/antar" />

    <!--    selesai-->
    <View
        android:id="@+id/rectangle_4"
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="308dp"
        android:layout_marginTop="338dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#F3F3F3"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="355dp"
        app:srcCompat="@drawable/selesai" />

    <Button
        android:id="@+id/pengaturan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:background="none"
        android:text="Pengaturan"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/bantuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:background="none"
        android:text="Bantuan"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/tentang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:background="none"
        android:text="Tentang"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="616dp"
        android:backgroundTint="@color/white"
        android:text="Keluar"
        android:textColor="@color/black" />




</RelativeLayout>